fase 1 - Critérios mínimos consulta

--- a/index.html
+++ b/index.html
@@ -1,14 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header class="nav-container">
+      <nav class="nav-main">
+        <h1>Consultar critérios</h1>
+        <div class="contact-link">Contato</div>
+      </nav>
+    </header>
+    <main>
+      <section id="form-section">
+        <form name="consultarCriterioMinimo">
+          <div>
+            <div>
+              <label for="departamento"></label>
+              <input
+                name="departamento"
+                id="departamento"
+                type="text"
+                placeholder="Selecione o departamento"
+              />
+            </div>
+            <div>
+              <label for="mercado"></label>
+              <input
+                name="mercado"
+                id="mercado"
+                type="text"
+                placeholder="Selecione o mercado"
+              />
+            </div>
+          </div>
+          <div>
+            <button type="submit">Consultar </button>
+            <button>Limpar</button>
+          </div>
+        </form>
+      </section>
+      <section id="list-section">
+        <div>
+          <h3>Critério PGC</h3>
+          <p>Nesta secção combatemos a quebra desconhecida do PGC</p>
+          <p>Data: 24/10/2025</p>
+        </div>
+        <div>
+          <h3>Critério PF</h3>
+          <p>Nesta secção combatemos a quebra desconhecida do PF</p>
+          <p>Data: 25/10/2025</p>
+        </div>
+        <div>
+          <h3>Critério Congelados</h3>
+          <p>Nesta secção combatemos a quebra desconhecida do Congelados</p>
+          <p>Data: 26/10/2025</p>
+        </div>
+      </section>
+    </main>
+
+    <h1>Test</h1>
+  </body>
 </html>
